data/derived/comb/progs/unify/prog7152.ml.out
Characters 93-106:
  digitsOfInt 0 :: return;;
  ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
